--- a/src/components/richtext/richtext.bookshop.yml
+++ b/src/components/richtext/richtext.bookshop.yml
@@ -6,6 +6,21 @@ spec:
   description: Rich text element.
   icon: edit_note
   tags: []
+  place_groups_below: true
+  groups:
+    - heading: Section
+      collapsed: true
+      inputs:
+        - classes
+        - height
+        - indent
+        - color
+        - background_color
+        - background_image
+        - background_video
+        - background_align
+        - background_opacity
+        - background_fixed
   preview:
     image:
       - key: background_image
@@ -16,3 +31,14 @@ spec:
 
 # Defines the structure of this component, as well as the default values
 blueprint:
+  content:
+  classes:
+  height:
+  indent:
+  color:
+  background_color:
+  background_image:
+  background_video:
+  background_align:
+  background_opacity:
+  background_fixed:
