--- a/src/components/gallery/gallery.bookshop.yml
+++ b/src/components/gallery/gallery.bookshop.yml
@@ -6,6 +6,22 @@ spec:
   description: Display images in a gallery.
   icon: collections
   tags: ["image", "collection"]
+  place_groups_below: true
+  groups:
+    - heading: Section
+      collapsed: true
+      inputs:
+        - content
+        - classes
+        - height
+        - indent
+        - color
+        - background_color
+        - background_image
+        - background_video
+        - background_align
+        - background_opacity
+        - background_fixed
   preview:
     image:
       - key: image[0].image
@@ -16,31 +32,33 @@ spec:
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-  height:
   columns: 0
   gap: true
   aspect: 1
-  indent: true
   linkgallery: false
   lightbox: true
   placeholder: true
-  classes:
   images:
     - image:
       title:
       description:
       link:
+  content:
+  classes:
+  height:
+  indent:
+  color:
+  background_color:
+  background_image:
+  background_video:
+  background_align:
+  background_opacity:
+  background_fixed:
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
-  height:
-    type: range
-    options:
-      step: 1
-      max: 100
-      min: 0
   columns:
     type: number
     comment: Set the number of columns. 0 puts all images in one row.
@@ -53,8 +71,6 @@ _inputs:
       step: 0.1
       max: 2
       min: 0.5
-  indent:
-    type: switch
   images:
     icon: image
   title:
