feat: add alignment option to section

--- a/src/components/gallery/gallery.bookshop.yml
+++ b/src/components/gallery/gallery.bookshop.yml
@@ -15,6 +15,7 @@ spec:
         - classes
         - height
         - indent
+        - align
         - color
         - background_color
         - background_image
@@ -47,6 +48,7 @@ blueprint:
   classes:
   height:
   indent:
+  align:
   color:
   background_color:
   background_image:
