--- a/src/components/richtext/richtext.bookshop.yml
+++ b/src/components/richtext/richtext.bookshop.yml
@@ -14,6 +14,7 @@ spec:
         - classes
         - height
         - indent
+        - align
         - color
         - background_color
         - background_image
@@ -35,6 +36,7 @@ blueprint:
   classes:
   height:
   indent:
+  align:
   color:
   background_color:
   background_image:
