--- a/src/components/card-index/card-index.bookshop.yml
+++ b/src/components/card-index/card-index.bookshop.yml
@@ -6,6 +6,23 @@ spec:
   description: List information about other pages
   icon: recent_actors
   tags: []
+  place_groups_below: true
+  groups:
+    - heading: Section
+      collapsed: true
+      inputs:
+        - content
+        - classes
+        - height
+        - indent
+        - align
+        - color
+        - background_color
+        - background_image
+        - background_video
+        - background_align
+        - background_opacity
+        - background_fixed
   preview:
     subtext:
       - key: target
@@ -24,7 +41,18 @@ blueprint:
   columns: 4
   pageSize: 0
   limit: 0
+  content:
   classes:
+  height:
+  indent:
+  align:
+  color:
+  background_color:
+  background_image:
+  background_video:
+  background_align:
+  background_opacity:
+  background_fixed:
 
 preview:
   target: /
