--- a/src/components/card-index/card-index.bookshop.yml
+++ b/src/components/card-index/card-index.bookshop.yml
@@ -23,6 +23,7 @@ spec:
         - background_align
         - background_opacity
         - background_fixed
+        - background_fit
   preview:
     subtext:
       - key: target
@@ -53,6 +54,7 @@ blueprint:
   background_align:
   background_opacity:
   background_fixed:
+  background_fit:
 
 preview:
   target: /
