--- a/src/components/file/file.bookshop.yml
+++ b/src/components/file/file.bookshop.yml
@@ -23,6 +23,7 @@ spec:
         - background_align
         - background_opacity
         - background_fixed
+        - background_fit
   preview:
     subtext:
       - template: "{files[*].title|default=files[*].url}"
@@ -51,6 +52,7 @@ blueprint:
   background_align:
   background_opacity:
   background_fixed:
+  background_fit:
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
