--- a/src/components/form/form.bookshop.yml
+++ b/src/components/form/form.bookshop.yml
@@ -23,6 +23,7 @@ spec:
         - background_align
         - background_opacity
         - background_fixed
+        - background_fit
   preview:
     subtext:
       - key: name
@@ -48,6 +49,7 @@ blueprint:
   background_align:
   background_opacity:
   background_fixed:
+  background_fit:
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
