--- a/src/components/navigation/social/social.bookshop.yml
+++ b/src/components/navigation/social/social.bookshop.yml
@@ -2,16 +2,13 @@
 spec:
   structures:
     - secondary_navigation
-  label: Quicklink
-  description: Add a link to the secondary navigation
-  icon: add_link
+  label: Social
+  description: Display Social Media Icons
+  icon: share
   tags: []
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-  text:
-  link:
-  new_tab: false
 
 _inputs:
 
