--- a/src/components/card-index/card-index.bookshop.yml
+++ b/src/components/card-index/card-index.bookshop.yml
@@ -36,7 +36,10 @@ spec:
 
 blueprint:
   target: ""
-  include: ["title", "link"]
+  card:
+    - _bookshop_name: card-index/cards/card
+      include: ["title", "link"]
+      layout: "vertical"
   filters: []
   prefilter: []
   columns: 4
@@ -58,7 +61,10 @@ blueprint:
 
 preview:
   target: /
-  include: ["title", "thumbnail", "description", "link"]
+  card:
+    - _bookshop_name: card-index/cards/card
+      include: ["title", "link"]
+      layout: "vertical"
 
 _inputs:
   target:
@@ -67,21 +73,10 @@ _inputs:
     comment: Path to fetch cards from.
     options:
       empty_type: string
-  include:
-    type: multiselect
-    label: Include
-    comment: Properties to include on each card
+  card:
+    type: object
     options:
-      values:
-        - title
-        - thumbnail
-        - description
-        - link
-        - categories
-        - read-more
-        - lightbox
-      allow_create: true
-      empty_type: array
+      structures: _structures.card-index
   filters:
     type: multiselect
     label: User Filters
