fix(card-index): add missing collections configuration for bookshop

--- a/src/components/card-index/card-index.bookshop.yml
+++ b/src/components/card-index/card-index.bookshop.yml
@@ -36,6 +36,7 @@ spec:
 
 blueprint:
   target: ""
+  collection:
   card:
     - _bookshop_name: card-index/cards/card
       include: ["title", "link"]
