--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@millstreamwebsoftware/astro",
+  "name": "@millstreamwebsoftware/mws-astro",
   "version": "0.1.0",
   "description": "",
   "type": "module",
@@ -8,7 +8,8 @@
     ".": "./index.ts"
   },
   "files": [
-    "index.ts"
+    "index.ts",
+    "src"
   ],
   "keywords": [],
   "author": "",
