--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@millstreamwebsoftware/mws-astro",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "",
   "type": "module",
   "baseUrl": ".",
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/node": "^24.10.1",
     "astro": "^5.16.4",
+    "@astrojs/check": "^0.9.6",
     "prettier": "^3.7.4",
     "prettier-plugin-astro": "^0.14.1",
     "typescript": "^5.9.3"
