--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@millstreamwebsoftware/mws-astro",
-  "version": "0.1.3",
+  "repository": {
+    "url": "https://github.com/millstreamwebsoftware/mws-astro"
+  },
+  "version": "0.1.4",
   "description": "",
   "type": "module",
   "baseUrl": ".",
