fix(gallery): correct typo in preview config

--- a/src/components/gallery/gallery.bookshop.yml
+++ b/src/components/gallery/gallery.bookshop.yml
@@ -26,7 +26,7 @@ spec:
         - background_fit
   preview:
     image:
-      - template: "{image[0].image}"
+      - template: "{images[0].image}"
     subtext:
       - key: content
     metadata:
