--- a/src/components/card-index/cards/card/card.bookshop.yml
+++ b/src/components/card-index/cards/card/card.bookshop.yml
@@ -1,7 +1,8 @@
 # Metadata about this component, to be used in the CMS
 spec:
   structures:
-    - card-index
+    - card_index
+    - slider_blocks
   label: Card
   description: A customisable card
   icon: web_stories
