feat(slider): restrict slider items to new structure

--- a/src/components/layout/columns/columns.bookshop.yml
+++ b/src/components/layout/columns/columns.bookshop.yml
@@ -2,6 +2,7 @@
 spec:
   structures:
     - content_blocks
+    - slider_blocks
   label: Columns
   description: Layout content in columns.
   icon: view_column
